[package]
name = "tonic_udp_aes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"
bytes = "1.0"
tonic-build = "0.9"
prost = "0.11"
[build-dependencies]
tonic-build = "0.9"
